--- a/#source/scss/_aboutUs.scss
+++ b/#source/scss/_aboutUs.scss
@@ -24,42 +24,25 @@
   }
   &__line {
     color: $white;
-    height: 360px;
+    min-height: 360px;
   }
-  &__block1 {
-    width: 25%;
-    background: $pink;
-    &__box {
-      max-width: 255px;
-      &__point {}
-      &__text {}
+  &__block {
+    width: calc(100% / 4);
+    padding-bottom: 10px;
+    &.pink {
+      background: $pink;
     }
-  }
-  &__block2 {
-    width: 25%;
-    background: $greenLight;
-    &__box {
-      max-width: 255px;
-      &__point {}
-      &__text {}
+    &.greenLight {
+      background: $greenLight;
     }
-  }
-  &__block3 {
-    width: 25%;
-    background: $blue;
-    &__box {
-      max-width: 255px;
-      &__point {}
-      &__text {}
+    &.blue {
+      background: $blue;
     }
-  }
-  &__block4 {
-    width: 25%;
-    background: $lightBlue;
+    &.lightBlue {
+      background: $lightBlue;
+    }
     &__box {
       max-width: 255px;
-      &__point {}
-      &__text {}
     }
   }
 }
