--- a/css/style.css
+++ b/css/style.css
@@ -289,36 +289,28 @@ a {
 }
 .about-us__line {
   color: #ffffff;
-  height: 360px;
+  min-height: 360px;
 }
-.about-us__block1 {
-  width: 25%;
+.about-us__block {
+  width: calc(100% / 4);
+  padding-bottom: 10px;
+}
+.about-us__block.pink {
   background: #FFE2DE;
 }
-.about-us__block1__box {
-  max-width: 255px;
-}
-.about-us__block2 {
-  width: 25%;
+.about-us__block.greenLight {
   background: #C4E769;
 }
-.about-us__block2__box {
-  max-width: 255px;
-}
-.about-us__block3 {
-  width: 25%;
+.about-us__block.blue {
   background: #62D0DF;
 }
-.about-us__block3__box {
-  max-width: 255px;
-}
-.about-us__block4 {
-  width: 25%;
+.about-us__block.lightBlue {
   background: #0052C1;
 }
-.about-us__block4__box {
+.about-us__block__box {
   max-width: 255px;
 }
+
 .offers {
   flex-wrap: wrap;
   color: #ffffff;
@@ -418,6 +410,14 @@ a {
   color: #DEE1FF;
 }
 
+.footer {
+  background-color: #62D0DF;
+}
+.footer h6 {
+  color: #ffffff;
+  padding: 32px 0 32px 180px;
+}
+
 .contacts__info {
   padding: 100px 0 0 70px;
 }
@@ -467,12 +467,4 @@ a {
   font-size: 14px;
   color: #909AB7;
   line-height: 1.64;
-}
-
-.footer {
-  background-color: #62D0DF;
-}
-.footer h6 {
-  color: #ffffff;
-  padding: 32px 0 32px 180px;
 }
