--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ a {
 .button {
   padding: 10px 15px;
   background: none;
+  transition: background 0.3s;
+}
+.button:hover {
+  background: #909AB7;
 }
 .button.button__white {
   color: #ffffff;
@@ -159,8 +163,14 @@ a {
 .button.bg__blue {
   background: #62D0DF;
 }
+.button.bg__blue:hover {
+  background: #b7e9f0;
+}
 .button.bg__orange {
   background: #F9B640;
+}
+.button.bg__orange:hover {
+  background: #fcdca3;
 }
 .button.radius {
   border-radius: 50px;
