--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,10 +5,11 @@ $white: #ffffff;
 $dark: #22356F;
 $pink: #FFE2DE;
 $greenLight: #C4E769;
-$purpule: #8F00FF;
+$purple: #8F00FF;
 $lightBlue: #0052C1;
-$corale: #DEE1FF;
+$coral: #DEE1FF;
 $lightGray: #909AB7;
+$lightBrown: #F4F9E2;
 
 
 //Fonts-size
