--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import "variables";
 @import "typography";
 @import "buttons";
-@import "conteiner";
+@import "container";
 @import "top";
 @import "thrive";
 @import "aboutUs";
