--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "typography";
 @import "buttons";
 @import "container";
+@import "heder";
 @import "top";
 @import "thrive";
 @import "aboutUs";
