--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,41 @@ a {
   background: #ffffff;
 }
 
+header {
+  padding: 30px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 5;
+  position: relative;
+  max-width: 1140px;
+  margin: 0 auto -87px;
+}
+header .logo a {
+  font-size: 24px;
+  color: #62D0DF;
+  line-height: 1.125;
+}
+header nav ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+header nav li {
+  padding-right: 30px;
+}
+header nav li:first-child a {
+  border-bottom: 1px solid #22356F;
+}
+header nav a {
+  font-size: 14px;
+  line-height: 1.14;
+  color: #22356F;
+}
+header nav a:hover {
+  color: #8F00FF;
+}
+
 .top__main-picture {
   right: 0;
   z-index: 2;
@@ -194,31 +229,6 @@ a {
   width: 100%;
   padding: 0 247px 0 179px;
   background-color: #F4F9E2;
-}
-.top__header {
-  padding-top: 30px;
-  justify-content: space-between;
-  z-index: 4;
-}
-.top__header__mark {
-  font-size: 24px;
-  color: #62D0DF;
-  line-height: 1.125;
-}
-.top__header__links {
-  justify-content: flex-end;
-  align-items: flex-end;
-  font-size: 14px;
-  line-height: 1.14;
-}
-.top__header__link {
-  padding-right: 30px;
-}
-.top__header__link a {
-  color: #22356F;
-}
-.top__header__link a:hover {
-  color: #8F00FF;
 }
 .top__introduction {
   max-width: 485px;
