--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ header nav a:hover {
 }
 
 .also__info {
-  padding: 103px 145px 0 106px;
+  padding: 103px 145px 40px 106px;
 }
 .also__info h5 {
   margin-bottom: 225px;
