--- a/scss/_also.scss
+++ b/scss/_also.scss
@@ -2,7 +2,7 @@
 .also {
   &__picture{}
   &__info {
-    padding: 103px 145px 0 106px;
+    padding: 103px 145px 40px 106px;
     & h5 {
       margin-bottom: 225px;
     }
